--- a/tareas.html
+++ b/tareas.html
@@ -16,7 +16,7 @@
         <div class="perfil">
           <h2>Isaac Mena López</h2>
           <h2>2016130651</h2>
-          <h2>Portafolio Desarrollo Web</h2>
+          <h2>Sección de Tareas</h2>
         </div>
       </div>
 
@@ -31,9 +31,9 @@
             </button>
           </li>
           <li>
-            <button class="opciones" onclick="window.location.href = './tareas.html';">
-              <i class="fas fa-pencil-alt"></i>
-              <p>Tareas</p>
+            <button class="opciones" onclick="window.location.href = './index.html';">
+              <i class="fas fa-home"></i>
+              <p>Inicio</p>
             </button>
           </li>
           <li>
@@ -71,7 +71,6 @@
     <footer>
     	<h3>ITCR 2019</h3>
       <a href="https://github.com/xsaco07/WebProject">Link al proyecto</a>
-      <p>IC8057 Introducción al desarrollo de aplicaciones WEB, IISem 2019</p>
     </footer>
 
 </body>
