--- a/labs.html
+++ b/labs.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Page Title</title>
+  <title>Laboratorios</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="./styles.css">
   <link href='https://fonts.googleapis.com/css?family=Corben' rel='stylesheet'>
@@ -63,8 +63,41 @@
     </aside>
 
     <section class="main">
-      <div>
-        <img id="bg1" src="./bg.jpg" alt="background">
+      <div class="maincontent">
+        <ul class="assigments">
+          <li>
+            <p>
+              Lab 1
+              <a href="#">
+                <i class="fas fa-link"></i>
+              </a>
+            </p>
+          </li>
+          <li>
+            <p>
+              Lab 2
+              <a href="#">
+                <i class="fas fa-link"></i>
+              </a>
+            </p>
+          </li>
+          <li>
+            <p>
+              Lab 3
+              <a href="#">
+                <i class="fas fa-link"></i>
+              </a>
+            </p>
+          </li>
+          <li>
+            <p>
+              Lab 4
+              <a href="#">
+                <i class="fas fa-link"></i>
+              </a>
+            </p>
+          </li>
+        </ul>
       </div>
     </section>
 
