--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Page Title</title>
+  <title>Portafolio</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="./styles.css">
   <link href='https://fonts.googleapis.com/css?family=Corben' rel='stylesheet'>
