Add html and html5 tags

--- a/labs.html
+++ b/labs.html
@@ -3,7 +3,7 @@
 <head>
   <title>Laboratorios</title>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="./styles.css">
+  <link rel="stylesheet" href="./Estilos/styles.css">
   <link href='https://fonts.googleapis.com/css?family=Corben' rel='stylesheet'>
   <script src="https://kit.fontawesome.com/1927c2f92b.js"></script>
 </head>
@@ -12,7 +12,7 @@
 	<header>
 
       <div class="topheader">
-        <img id="pp" src="./profilepic.jpg">
+        <img id="pp" src="./Imagenes/profilepic.jpg">
         <div class="perfil">
           <h2>Isaac Mena López</h2>
           <h2>2016130651</h2>
