--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Portafolio</title>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="./styles.css">
+  <link rel="stylesheet" href="./Estilos/styles.css">
   <link href='https://fonts.googleapis.com/css?family=Corben' rel='stylesheet'>
   <script src="https://kit.fontawesome.com/1927c2f92b.js"></script>
 </head>
@@ -12,7 +12,7 @@
 	<header>
 
       <div class="topheader">
-        <img id="pp" src="./profilepic.jpg">
+        <img id="pp" src="./Imagenes/profilepic.jpg">
         <div class="perfil">
           <h2>Isaac Mena López</h2>
           <h2>2016130651</h2>
@@ -64,7 +64,7 @@
 
     <section class="main">
       <div>
-        <img id="bg1" src="./bg.jpg" alt="background">
+        <img id="bg1" src="./Imagenes/bg.jpg" alt="background">
       </div>
     </section>
 
