Add link in a txt file

--- a/Trabajos/tr1.html
+++ b/Trabajos/tr1.html
@@ -25,19 +25,19 @@
   <nav class="navigation">
       <ul>
           <li>
-            <button class="opciones" onclick="window.location.href = './clase.html';">
+            <button class="opciones" onclick="window.location.href = '../clase.html';">
               <i class="fas fa-book"></i>
               <p>Trabajo en Clase</p>
             </button>
           </li>
           <li>
-            <button class="opciones" onclick="window.location.href = './tareas.html';">
+            <button class="opciones" onclick="window.location.href = '../tareas.html';">
               <i class="fas fa-pencil-alt"></i>
               <p>Tareas</p>
             </button>
           </li>
           <li>
-            <button class="opciones" onclick="window.location.href = './labs.html';">
+            <button class="opciones" onclick="window.location.href = '../labs.html';">
               <i class="fas fa-laptop"></i>
               <p>Laboratorios</p>
             </button>
