--- a/Practicas/PrSintaxis/pr1.html
+++ b/Practicas/PrSintaxis/pr1.html
@@ -3,7 +3,7 @@
 <head>
   <title>Portafolio</title>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="./stylestr1.css">
+  <link rel="stylesheet" href="./stylespr1.css">
   <link href='https://fonts.googleapis.com/css?family=Corben' rel='stylesheet'>
   <script src="https://kit.fontawesome.com/1927c2f92b.js"></script>
 </head>
@@ -12,7 +12,7 @@
 	<header>
 
       <div class="topheader">
-        <img id="pp" src="../Imagenes/profilepic.jpg">
+        <img id="pp" src="../../Imagenes/profilepic.jpg">
         <div class="perfil">
           <h2>Isaac Mena López</h2>
           <h2>2016130651</h2>
@@ -25,19 +25,19 @@
   <nav class="navigation">
       <ul>
           <li>
-            <button class="opciones" onclick="window.location.href = '../clase.html';">
+            <button class="opciones" onclick="window.location.href = '../../practicas.html';">
               <i class="fas fa-book"></i>
-              <p>Trabajo en Clase</p>
+              <p>Prácticas</p>
             </button>
           </li>
           <li>
-            <button class="opciones" onclick="window.location.href = '../tareas.html';">
+            <button class="opciones" onclick="window.location.href = '../../tareas.html';">
               <i class="fas fa-pencil-alt"></i>
               <p>Tareas</p>
             </button>
           </li>
           <li>
-            <button class="opciones" onclick="window.location.href = '../labs.html';">
+            <button class="opciones" onclick="window.location.href = '../../labs.html';">
               <i class="fas fa-laptop"></i>
               <p>Laboratorios</p>
             </button>
@@ -174,7 +174,7 @@
               </ul>
             </td>
             <td>
-                <img src="../Imagenes/bg.jpg" alt="fondo1" width="200px" height="160px">
+                <img src="../../Imagenes/bg.jpg" alt="fondo1" width="200px" height="160px">
             </td>
           </tr>
           <tr>
@@ -438,7 +438,7 @@
               </ul>
             </td>
             <td>
-              <audio src="../Sounds/hello.mp3" controls></audio>
+              <audio src="../../Sounds/hello.mp3" controls></audio>
             </td>
           </tr>
           <tr>
@@ -457,7 +457,7 @@
             </td>
             <td>
               <video width="280" height="200" controls>
-                <source src="../Videos/video1.mp4" type="video/mp4">
+                <source src="../../Videos/video1.mp4" type="video/mp4">
               </video>
             </td>
           </tr>
@@ -652,7 +652,7 @@
             </td>
             <td>
               <div class="ejemplo" style="filter:contrast">
-                <img src="../Imagenes/bg3.jpg" width="200px" height="150px" style="filter: grayscale(100%);">
+                <img src="../../Imagenes/bg3.jpg" width="200px" height="150px" style="filter: grayscale(100%);">
                 <p>Using grayscale 100%</p>
               </div>
             </td>
@@ -685,7 +685,7 @@
             </td>
             <td>
               <div class="ejemplo">
-                <img src="../Imagenes/bg3.jpg" width="200px" height="150px" style="float:left;">
+                <img src="../../Imagenes/bg3.jpg" width="200px" height="150px" style="float:left;">
                 <p>No clear</p>
                 <p style="clear:left">Clear</p>
               </div>
