--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
   <nav class="navigation">
       <ul>
           <li>
-            <button class="opciones" onclick="window.location.href = './clase.html';">
+            <button class="opciones" onclick="window.location.href = './practicas.html';">
               <i class="fas fa-book"></i>
-              <p>Trabajo en Clase</p>
+              <p>Prácticas</p>
             </button>
           </li>
           <li>
