--- a/practicas.html
+++ b/practicas.html
@@ -68,7 +68,7 @@
           <li>
             <p>
               Trabajo 1
-              <a href="./Trabajos/tr1.html">
+              <a href="./Practicas/PrSintaxis/pr1.html">
                 <i class="fas fa-link"></i>
               </a>
             </p>
@@ -76,7 +76,7 @@
           <li>
             <p>
               Trabajo 2
-              <a href="#">
+              <a href="./Practicas/PrCalendario/calendario.html">
                 <i class="fas fa-link"></i>
               </a>
             </p>
