Update links practicas

--- a/practicas.html
+++ b/practicas.html
@@ -84,7 +84,7 @@
           <li>
             <p>
               Trabajo 3
-              <a href="#">
+              <a href="./Practicas/PrConversor/conversor.html">
                 <i class="fas fa-link"></i>
               </a>
             </p>
