Advance with home page of lab01

--- a/Practicas/PrConversor/conversor.html
+++ b/Practicas/PrConversor/conversor.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="./conversor.css">
-    <!-- <script src="https://kit.fontawesome.com/1927c2f92b.js"></script> -->
+    <script src="https://kit.fontawesome.com/1927c2f92b.js"></script>
     <title>Conversor de divisas</title>
   </head>
   <body>
