--- a/practicas.html
+++ b/practicas.html
@@ -67,7 +67,7 @@
         <ul class="assigments">
           <li>
             <p>
-              Trabajo 1
+              Sintaxis Sem 3
               <a href="./Practicas/PrSintaxis/pr1.html">
                 <i class="fas fa-link"></i>
               </a>
@@ -75,7 +75,7 @@
           </li>
           <li>
             <p>
-              Trabajo 2
+              Calendario Sem 5
               <a href="./Practicas/PrCalendario/calendario.html">
                 <i class="fas fa-link"></i>
               </a>
@@ -83,15 +83,15 @@
           </li>
           <li>
             <p>
-              Trabajo 3
-              <a href="#">
+              Conversor Sem 5
+              <a href="./Practicas/PrConversor/conversor.html">
                 <i class="fas fa-link"></i>
               </a>
             </p>
           </li>
           <li>
             <p>
-              Trabajo 4
+              Práctica 4
               <a href="#">
                 <i class="fas fa-link"></i>
               </a>
