--- a/Labs/Lab1/index.html
+++ b/Labs/Lab1/index.html
@@ -180,7 +180,21 @@
             <div class="tab-pane fade" id="pills-ecobloques" role="tabpanel">Eco-bloques</div>
 
             <!-- Centros -->
-            <div class="tab-pane fade" id="pills-centros" role="tabpanel">Centros</div>
+            <div class="tab-pane fade" id="pills-centros" role="tabpanel">
+              <div class="container text-center my-3 py-5">
+                <div class="row">
+                  <div class="col-8 offset-lg-2">
+                    <div class="card">
+                      <div class="card-body" style="height: 500px;" id="map-container">
+                        <iframe scrolling="no" width="100%" height="100%" src="Multimedia/mapa/mapa.html"></iframe>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <script type="text/javascript" src="script_mapa.js"></script>
+                
+              </div>
+            </div>
 
             <!-- Noticias -->
             <div class="tab-pane fade" id="pills-noticias" role="tabpanel">Noticias</div>
