Add logo, creators desciptions and photos

--- a/Labs/Lab1/index.html
+++ b/Labs/Lab1/index.html
@@ -14,8 +14,8 @@
       <div class="row sticky-top">
         <div class="col" role="navigation">
           <ul class="nav nav-tabs mb-5 nav-justified flex-column flex-sm-row" id="menu" role="tablist">
-            <li class="nav-item">
-              <a class="navbar-brand" href="#">Logo</a>
+            <li class="nav-item" id="logo">
+              <img src="https://i.pinimg.com/originals/bb/02/d2/bb02d204f05999211589f55b80e9500d.png" width="110px" height="50px">
             </li>
             <li class="nav-item">
               <a class="flex-sm-fill text-sm-center nav-link active" id="pills-inicio-tab" data-toggle="tab" href="#pills-inicio" role="tab" aria-controls="pills-home" aria-selected="true">Inicio</a>
@@ -238,7 +238,7 @@
                   </div>
                 </div>
                 <script type="text/javascript" src="script_mapa.js"></script>
-                
+
               </div>
             </div>
 
@@ -255,16 +255,16 @@
                   <div class="col-4">
                     <div class="card">
                       <div class="card-body">
-                        <img src="Multimedia/person.png" alt="" class="img-fluid rounded-circle w-50 mb-3">
+                        <img src="Multimedia/foto_isaac.jpg" alt="" class="img-fluid rounded-circle w-50 mb-3">
                         <h4 class="card-title">Isaac Mena López</h3>
                         <h6 class="card-subtitle text-muted mb-4">Desarrollador</h5>
                         <h6 class="card-text">
-                          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
-                          do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                          Estudiante avanzado de Ingeniería en Computación del TEC y que
+                          posee gustos por la programación y diseño web.
                         </h6>
                         <div class="d-flex flex-row justify-content-center">
                           <div class="p-4">
-                            <a href="#">
+                            <a href="https://www.facebook.com/isaac.mena.3">
                               <i class="fab fa-facebook" style="font-size:32px;"></i>
                             </a>
                           </div>
@@ -274,7 +274,7 @@
                             </a>
                           </div>
                           <div class="p-4">
-                            <a href="#">
+                            <a href="xsaco07@gmail.com">
                               <i class="fas fa-at" style="font-size:32px;"></i>
                             </a>
                           </div>
@@ -286,16 +286,16 @@
                   <div class="col-4">
                     <div class="card">
                       <div class="card-body">
-                        <img src="Multimedia/person.png" alt="" class="img-fluid rounded-circle w-50 mb-3">
+                        <img src="Multimedia/foto_emmanuel.jpg" alt="" class="img-fluid rounded-circle w-50 mb-3">
                         <h4 class="card-title">Emmanuel Alfaro Brenes</h3>
                         <h6 class="card-subtitle text-muted mb-4">Desarrollador</h5>
                         <h6 class="card-text">
-                          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
-                          do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                          Estudiante avanzado de Ingeniería en Computación del TEC y que
+                          posee gustos por la programación y diseño web.
                         </h6>
                         <div class="d-flex flex-row justify-content-center">
                           <div class="p-4">
-                            <a href="#">
+                            <a href="https://www.facebook.com/EmAlBr">
                               <i class="fab fa-facebook" style="font-size:32px;"></i>
                             </a>
                           </div>
@@ -305,7 +305,7 @@
                             </a>
                           </div>
                           <div class="p-4">
-                            <a href="#">
+                            <a href="ealfarobrenes@hotmail.com">
                               <i class="fas fa-at" style="font-size:32px;"></i>
                             </a>
                           </div>
@@ -318,15 +318,15 @@
                     <div class="card">
                       <div class="card-body">
                         <img src="Multimedia/person.png" alt="" class="img-fluid rounded-circle w-50 mb-3">
-                        <h4 class="card-title">Fernando</h3>
+                        <h4 class="card-title">Fernando Rojas</h3>
                         <h6 class="card-subtitle text-muted mb-4">Desarrollador</h5>
                         <h6 class="card-text">
-                          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
-                          do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                          Estudiante avanzado de Ingeniería en Computación del TEC y que
+                          posee gustos por la programación y diseño web.
                         </h6>
                         <div class="d-flex flex-row justify-content-center">
                           <div class="p-4">
-                            <a href="#">
+                            <a href="https://www.facebook.com/luis.fernando.rojas0">
                               <i class="fab fa-facebook" style="font-size:32px;"></i>
                             </a>
                           </div>
@@ -336,7 +336,7 @@
                             </a>
                           </div>
                           <div class="p-4">
-                            <a href="#">
+                            <a href="rojas.luis28@gmail.com">
                               <i class="fas fa-at" style="font-size:32px;"></i>
                             </a>
                           </div>
